--- a/eclipselink/jpa-basic/pom.xml
+++ b/eclipselink/jpa-basic/pom.xml
@@ -35,5 +35,10 @@
     <artifactId>derbytools</artifactId>
     <version>10.15.2.0</version>
 </dependency>
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-context</artifactId>
+          <version>5.2.16.RELEASE</version>
+      </dependency>
   </dependencies>
 </project>
