--- a/eclipselink/jpa-basic/pom.xml
+++ b/eclipselink/jpa-basic/pom.xml
@@ -95,5 +95,10 @@
             <version>3.12.4</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.22</version>
+        </dependency>
     </dependencies>
 </project>
